# KLip-PPO

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  CITATION.cff  README.md  pixi.toml  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: chore.yml  ci.yml  github-pages.yml  pixi-update.yml
analysis/: README.md  __init__.py  figures.sha256
analysis/datasets/: __init__.py  baselines.parquet  runs.lock.json  schema.py  sweeps.parquet
analysis/export/: __init__.py  __main__.py  anonymize.py  download.py  normalize.py  runs.py
analysis/render/: __init__.py  __main__.py  checksums.py  derive.py  figures.py  site.py  sources.py  style.py  tables.py
artifacts/: README.md
configs/snapshots/: _index.json
klip_ppo/: __init__.py
klip_ppo/benchmarks/: __init__.py  box2d.py  classic_control.py  mujoco.py
klip_ppo/cli/: __init__.py  _common.py  artifacts.py  eval.py  experiment_plans.py  main.py  materialize.py  plot.py  report.py  snapshot.py  sweep.py  train.py
klip_ppo/configs/: __init__.py  base.py  env.py  experiment.py  logging_cfg.py  network.py  rollout.py  runtime.py  snapshot.py  sweep.py  trainer.py
klip_ppo/core/: __init__.py  checkpoint.py  distributions.py  evaluation.py  gae.py  losses.py  networks.py  rollout.py  run_context.py
klip_ppo/envs/: __init__.py  gym_env.py  normalization.py  vec_env.py
klip_ppo/experiments/: __init__.py  box2d.py  classic_control.py  common.py  mujoco.py  plans.py  registry.py  sweeps.py
klip_ppo/research/: __init__.py  aggregation.py  plotting.py  report.py  tables.py
paper/: main.tex  references.bib
scripts/: build_paper.sh
submission/: README.md  __init__.py  __main__.py  archive.py  size.py  stage.py  unpack.py  validate.py
tests/: __init__.py  conftest.py  test_package.py
website/: experiments.html  index.html  theorems.html
website/js/: data.js  (+6 more)
(+172 files in other folders)
